<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_text_label"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:maxLength="20"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/forgot_password_text"
        style="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/button_round_style"
        android:text="@string/login_text"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/not_have_account_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/not_have_account"
        style="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <View
        android:id="@+id/divider_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/or_divider_text"
        app:layout_constraintTop_toTopOf="@id/or_divider_text"
        app:layout_constraintBottom_toBottomOf="@id/or_divider_text"/>

    <TextView
        android:id="@+id/or_divider_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/or_text"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/divider_left"
        app:layout_constraintEnd_toStartOf="@id/divider_right"
        app:layout_constraintTop_toBottomOf="@id/not_have_account_text_label"/>

    <View
        android:id="@+id/divider_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginRight="16dp"
        android:background="#000000"
        app:layout_constraintStart_toEndOf="@id/or_divider_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/or_divider_text"
        app:layout_constraintBottom_toBottomOf="@id/or_divider_text"/>

    <LinearLayout
        android:id="@+id/google_sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/button_sign_in_border"
        app:layout_constraintTop_toBottomOf="@id/or_divider_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/google_icon"/>

        <TextView
            android:id="@+id/google_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/sign_in_with_google"/>

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:paddingTop="33dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_sign_in_button"/>

    <LinearLayout
        android:id="@+id/facebook_sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/button_sign_in_border"
        app:layout_constraintTop_toBottomOf="@id/google_sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/facebook_icon"/>

        <TextView
            android:id="@+id/facebook_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:text="@string/sign_in_with_facebook"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>